FIX: UI for category trees not becoming scrollable elements when tree branch is too large [t20876]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@13633 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -1768,6 +1768,8 @@ a.BrowseRefresh{
 #FilterBarContainer #AdvancedSearchMediaSection input.SplitSearch { width: 80px; }
 #FilterBarContainer .Question .indent, #FilterBarContainer .Question .stdwidth, #FilterBarContainer .stdwidth { width: initial; }
 #FilterBarContainer div[class*='_range'] select { width: 89px; }
+#FilterBarContainer div.Fixed { max-height: 200px; overflow-y: scroll; }
+#FilterBarContainer .Question .Fixed { width: 100%; }
 
 .FullWidth { width: -webkit-fill-available; }
 .InsetBottomShadow { background: rgba(0, 0, 0, 0.2); }
